remove velocity dependency - use lerp for easings - create Raf lib - add visibility sensor to stop/start raf

--- a/components/molecules/WordHover/general.css
+++ b/components/molecules/WordHover/general.css
@@ -20,7 +20,7 @@
   ;
   transform: rotate(0.01deg);
   transform-origin: center center;
-  transition: opacity 0.2;
+  transition: opacity 0.15s;
 }
 
 .bubbleVisible {
